# capsicum-rs

./: .cirrus.yml  CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml
capsicum/: CHANGELOG.md  Cargo.toml  build.rs
capsicum/examples/: getuid.rs
capsicum/src/: common.rs  fcntl.rs  ioctl.rs  lib.rs  process.rs  right.rs  util.rs
capsicum/src/casper/: mod.rs
capsicum/tests/: lib.rs
casper-sys/: Cargo.toml  build.rs
casper-sys/bindgen/: bindgen.sh  wrapper.h
casper-sys/src/: ffi.rs  lib.rs
src/: cap.rs  common.rs  fcntl.rs  fnctl.rs  ioctl.rs  lib.rs  process.rs  right.rs  rights.rs  util.rs
tests/: lib.rs
