[package]
name = "capsicum"
version = "0.1.2"
authors = ["Daniel Robertson <dan.robertson@anidata.org>"]
license = "MPL-2.0"
repository = "https://github.com/dlrobertson/capsicum-rs"
description = """
Simple intuitive Rust bindings for the FreeBSD capsicum framework
"""
build = "build.rs"
readme = "README.md"
keywords = ["sandbox", "FreeBSD", "capsicum"]

[dependencies]
libc = "0.2.20"
