[package]
name = "capsicum"
version = "0.1.3"
authors = ["Daniel Robertson <dan.robertson@anidata.org>"]
license = "MPL-2.0"
repository = "https://github.com/dlrobertson/capsicum-rs"
description = """
Simple intuitive Rust bindings for the FreeBSD capsicum framework
"""
build = "build.rs"
readme = "README.md"
keywords = ["sandbox", "FreeBSD", "capsicum"]

[package.metadata.docs.rs]
targets = [
  "x86_64-unknown-freebsd",
]

[dependencies]
libc = "0.2.20"

[build-dependencies]
version_check = "0.9.4"

[dev-dependencies]
nix = "0.25.0"
tempfile = "3.0"
