[package]
name = "capsicum"
edition = "2021"
version = "0.1.3"
authors = ["Daniel Robertson <dan.robertson@anidata.org>"]
license = "MPL-2.0"
repository = "https://github.com/dlrobertson/capsicum-rs"
rust-version = "1.62"
description = """
Simple intuitive Rust bindings for the FreeBSD capsicum framework
"""
build = "build.rs"
readme = "README.md"
keywords = ["sandbox", "FreeBSD", "capsicum"]
categories = ["os::freebsd-apis"]

include = ["src/**/*", "test/**/*", "build.rs", "LICENSE", "README.md", "CHANGELOG.md"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
targets = [
  "x86_64-unknown-freebsd",
]

[features]
casper = [ "casper-sys", "libnv", "libnv-sys" ]

[[example]]
name = "getuid"
required-features = ["casper"]

[dependencies]
libc = { version = "0.2.138", features = [ "extra_traits" ] }
casper-sys = { path = "../casper-sys", optional = true}
libnv = { version = "0.4.1", default_features = false, features = [ "libnv" ], optional = true }
libnv-sys = { version = "0.2.0", optional = true }
const-cstr = "0.3.0"
ctor = "0.1.26"

[build-dependencies]
version_check = "0.9.4"

[dev-dependencies]
nix = { version = "0.26.1", default_features = false, features = [ "ioctl", "process" ] }
libnv-sys = "0.2.0"
tempfile = "3.0"
