[package]
name = "capsicum"
edition = "2021"
version = "0.4.2"
authors = ["Dan Robertson <dan@dlrobertson.com>"]
license = "MPL-2.0"
repository = "https://github.com/dlrobertson/capsicum-rs"
rust-version = "1.77.0"
description = """
Simple intuitive Rust bindings for the FreeBSD capsicum framework
"""
build = "build.rs"
readme = "README.md"
keywords = ["sandbox", "FreeBSD", "capsicum"]
categories = ["os::freebsd-apis"]

include = ["src/**/*", "test/**/*", "build.rs", "LICENSE", "README.md", "CHANGELOG.md"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
  "x86_64-unknown-freebsd",
]

[features]
casper = [ "casper-sys", "dep:libnv", "dep:libnv-sys" ]

[[example]]
name = "getuid"
required-features = ["casper"]
path = "examples/getuid.rs"

[dependencies]
libc = { version = "0.2.156", features = [ "extra_traits" ] }
casper-sys = { path = "../casper-sys", optional = true, version = "0.1.2" }
libnv = { version = "0.4.2", default-features = false, features = [ "libnv" ], optional = true }
libnv-sys = { version = "0.2.1", optional = true }
ctor = "0.2.3"

[build-dependencies]
version_check = "0.9.4"

[dev-dependencies]
cap-std = "3.0"
nix = { version = ">=0.27.0,<0.30.0", default-features = false, features = [ "fs", "ioctl", "process", "socket" ] }
libnv-sys = "0.2.1"
tempfile = "3.6"
