[package]
name = "casper-sys"
version = "0.1.1"
edition = "2021"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/dlrobertson/capsicum-rs"
rust-version = "1.62"
categories = ["external-ffi-bindings"]
description = """
FFI bindings for FreeBSD's libcasper
"""
keywords = ["sandbox", "FreeBSD", "capsicum"]
links = "casper"

[dependencies]
libnv-sys = "0.2.1"
